<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>
    <string name="title_activity_vtrackmap">V-tracker</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">welcome</string>
    <string name="btrack">Track</string>
    <string name="bexit">Exit</string>
    <string name="logo">logo</string>
    <string name="vlogo">V_solutions</string>
    <string name="bTrack">Track</string>
    <string name="bExit">Exit</string>
    <string name="phoneno">Enter Your Track GPS Number</string>
    <string name="maptitle"> Tracker Results</string>
    <string name="trackresult">New Text</string>
    <string name="speed">speed</string>
    <string name="tspeed">Speed :</string>
    <string name="pwr">Power :</string>
    <string name="rpwr">power</string>
    <string name="acc">ACC :</string>
    <string name="racc">on/off </string>
    <string name="door">Door :</string>
    <string name="rdoor">on/off</string>
    <string name="btnHybrid">Track</string>



</resources>
