<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7fa87f"
    android:id="@+id/homescreen">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingBottom="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/vlogo"
                android:id="@+id/title"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_gravity="center"
                android:autoText="false"
                android:typeface="serif"
                android:textColor="#363636" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:contentDescription="@string/logo"
                android:src="@drawable/tracker"
                android:clickable="false" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneno"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneNumber"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bTrack"
            android:id="@+id/bTrack"
            android:textSize="20sp"
            android:background="#363636"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bExit"
            android:id="@+id/bExit"
            android:textSize="20sp"
            android:background="#363636"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>